--- a/package.json
+++ b/package.json
@@ -8,11 +8,26 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "bootstrap": "^5.3.0",
+        "cors": "^2.8.5",
+        "exceljs": "^4.3.0",
+        "json2csv": "^6.0.0-alpha.2",
+        "json2xls": "^0.1.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.4.2",
+        "nodemailer": "^6.9.7",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.8.0",
+        "react-bootstrap-icons": "^1.10.3",
+        "react-confetti": "^6.1.0",
+        "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
+        "react-particles": "^2.12.2",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4",
-          "react-dom": "^18.2.0"
+        "react-slick": "^0.29.0",
+        "react-social-icons": "^6.4.0",
+        "slick-carousel": "^1.8.1",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
